--- a/src/components/grid/grid.css
+++ b/src/components/grid/grid.css
@@ -1,12 +1,18 @@
-section {
+.grid {
     width: 100%;
     display: grid;
     grid-template-columns: 1fr;
     grid-gap: 1rem;
 }
 
+.controls {
+    margin: 1rem;
+    display: flex;
+    justify-content: space-between;
+}
+
 @media (min-width: 768px) {
-    section {
+    .grid {
         grid-template-columns: repeat(2, 1fr);
     }
 }
