--- a/src/components/grid/grid.css
+++ b/src/components/grid/grid.css
@@ -11,6 +11,10 @@
     justify-content: space-between;
 }
 
+.message {
+    margin: 1rem;
+}
+
 @media (min-width: 768px) {
     .grid {
         grid-template-columns: repeat(2, 1fr);
